<resources>
    <string name="app_name">NYTSearch</string>
    <string name="menu_search">Search</string>
    <string name="menu_filters">Filters</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_education">Education</string>
    <string name="checkbox_sports">Sports</string>
    <string name="save">SAVE</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="enter_begin_date">Enter Begin Date</string>
</resources>
